# zampy

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  README.md  environment.yml  eth_dataset_demo.ipynb  example_recipe.yml  mkdocs.yml  pull_request_template.md  pyproject.toml  sonar-project.properties  test_lib.py
.github/workflows/: build.yml  mamba.yml  sonarcloud.yml
demo/: README.md  cams_co2_dataset_demo.ipynb  era5-land_dataset_demo.ipynb  era5_dataset_demo.ipynb  eth_dataset_demo.ipynb  land_cover_dataset_demo.ipynb  prism_dem_demo.ipynb
docs/: CHANGELOG.md  CONTRIBUTING.md  README.dev.md  available_datasets.md  available_recipes.md  configuration.md  index.md  using_zampy.md
recipes/: STEMMUS_SCOPE_input.yml
src/lsmdata/: __init__.py
src/lsmdata/datasets/: __init__.py
src/zampy/: __init__.py  cli.py  recipe.py
src/zampy/conventions/: ALMA.json
src/zampy/datasets/: __init__.py  cams.py  catalog.py  cds_utils.py  converter.py  dataset_protocol.py  ecmwf_dataset.py  era5.py  era5_land.py  eth_canopy_height.py  fapar_lai.py  land_cover.py  prism_dem.py  utils.py  validation.py
src/zampy/reference/: README.md  variables.py
src/zampy/utils/: regrid.py  xesmf_regrid.py
tests/: __init__.py  generate_test_data.py  test_cds_utils.py  test_converter.py  test_dataset_protocol.py  test_regrid.py  test_utils.py  test_validation.py  test_xesmf_regrid.py
tests/test_data/cams/: cams_co2_concentration_2003_01_02-2003_01_04.nc  cams_co2_concentration_2020_01_01-2020_02_15.nc  properties.json
tests/test_data/era5/: era5_10m_v_component_of_wind_2010-1.nc  era5_eastward_component_of_wind_2020-1.nc  era5_northward_component_of_wind_2020-1.nc  era5_surface_pressure_2020-1.nc  era5_surface_solar_radiation_downwards_2020-1.nc  era5_surface_thermal_radiation_downwards_2020-1.nc  era5_total_precipitation_2020-1.nc  properties.json
tests/test_data/era5-land/: era5-land_air_temperature_2020-1.nc  era5-land_dewpoint_temperature_2020-1.nc  properties.json
tests/test_data/eth-canopy-height/: ETH_GlobalCanopyHeight_10m_2020_N51E003_Map.tif  properties.json
tests/test_data/fapar-lai/: generate_fake_data.py  properties.json
tests/test_data/land-cover/: properties.json
tests/test_data/prism-dem-90/: Copernicus_DSM_30_N53_00_E004_00.tar  properties.json
tests/test_datasets/: __init__.py  test_cams.py  test_era5.py  test_era5_land.py  test_eth_canopy_height.py  test_fapar_lai.py  test_land_cover.py  test_prism_dem.py
tests/test_recipes/: generate_test_data.py  test_config_loader.py  test_recipe_loader.py  test_simple_recipe.py
tests/test_recipes/recipes/: era5_recipe.yml
