[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/zampy/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github", "/.mypy_cache", "/.pytest_cache", "/.githooks",
  "sonar-project.properties"
]

[tool.hatch.build.targets.wheel]
packages = ["src/zampy"]

[tool.hatch.publish.index]
disable = true  # Requires confirmation when publishing to pypi.

[project]
name = "zampy"
description = "python package for getting Land Surface Model input data."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8, <3.11"
authors = [
  {email = "b.schilperoort@esciencecenter.nl"},
  {name = "Bart Schilperoort, Yang Liu, Fakhereh Alidoost"}
]
maintainers = [
  {name = "Bart Schilperoort", email = "b.schilperoort@esciencecenter.nl"},
  {name = "Yang Liu", email = "y.liu@esciencecenter.nl"},
  {name = "Fakhereh Alidoost", email = "f.alidoost@esciencecenter.nl"},
]
keywords = [
  "data",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "requests",
  "netcdf4",
  "numpy",
  "pandas",
  "matplotlib",
  "xarray",
  "rioxarray",  # required for TIFF files
  "tqdm",
  "dask[diagnostics]",
  "distributed",  # dask-distributed
  "pint",
  "cf_xarray",  # required to auto-pint CF compliant datasets.
  "pint-xarray",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "bump2version",
  "hatch",
  "ruff",
  "black",
  "mypy",
  "types-requests", # type stubs for request lib
  "types-urllib3", # type stubs for url lib
  "pytest",
  "pytest-cov",
  "pre-commit",
]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
lint = [
  "ruff check src/ tests/",
  "mypy src/",
  "black --check --diff src/ tests/",
]
format = [
  "black src/ tests/",
  "ruff check src/ tests/ --fix --exit-non-zero-on-fix",
  "lint",
]
test = ["pytest ./src/zampy/ ./tests/ --doctest-modules",]
coverage = [
  "pytest --cov --cov-report term --cov-report xml --junitxml=xunit-result.xml tests/",
]

# [tool.hatch.envs.conda]
# type = "conda"
# python = "3.10"
# command = "micromamba"
# environment-file = "environment.yml"
# extra-dependencies = ["pytest", "pytest-cov"]

# [tool.hatch.envs.conda.scripts]
# test = ["pytest ./tests/",]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.ruff]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "B",  # flake8-bugbear
  "D",  # pydocstyle
  "C90",  # mccabe complexity
  "I",  # isort
  "N",  # PEP8-naming
  "UP",  # pyupgrade (upgrade syntax to current syntax)
  "PLE",  # Pylint error https://github.com/charliermarsh/ruff#error-ple
  "PLR",  # Pylint refactor (e.g. too-many-arguments)
  "PLW",  # Pylint warning (useless-else-on-loop)
]
extend-select = [
  "D401",  # First line should be in imperative mood
  "D400",  # First line should end in a period.
  "D404",  # First word of the docstring should not be 'This'
  "TID252",  # No relative imports (not pep8 compliant)
]
ignore = [
  "PLR2004",  # magic value used in comparsion (i.e. `if ndays == 28: month_is_feb`).
]
line-length = 88
exclude = ["docs", "build"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py38"

[tool.ruff.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
known-first-party = ["zampy"]
force-single-line = true
lines-after-imports = 2
no-lines-before = ["future","standard-library","third-party","first-party","local-folder"]

[tool.coverage.run]
branch = true
source = ["src/zampy"]
command_line = "-m pytest"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:"
]
